# screensaver.crystalmorph

./: CMakeLists.txt
screensaver.crystalmorph/: addon.xml  addon.xml.in
src/: Fractal.cpp  Fractal.h  Util.cpp  Util.h  fractalobject.cpp  fractalobject.h  sphere.cpp  sphere.h
